<resources>
    <string name="app_name">Team COP</string>
    <string name="action_settings">Settings</string>
    <string name="team_name">Name of your team</string>
    <string name="member1">Name of the first member</string>
    <string name="member2">Name of the second member</string>
    <string name="member3">Name of the third member(optional)</string>
    <string name="number1">Entry number of the first member</string>
    <string name="number2">Entry number of the second member</string>
    <string name="number3">Entry number of the third member(optional)</string>
    <string name="button_register">Register</string>
    <string name="title_activity_success_display">SuccessDisplay</string>
    <string name="title_activity_failure_display">FailureDisplay</string>
    <string name="show_message">There is\nsomething\nwrong</string>
    <string name="show_message1">You have successfully registered your team.</string>
    <string name="about">About</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="dummy_button">Register </string>
    <string name="dummy_content">Registration\nfor COP290</string>
    <string name="cop">This app has been designed to register teams for the course COP290 offered by the Department of Computer Science and Engineering, IIT Delhi.\nThe design team includes:\nAryan Garg\nGurtej Sohi\nSachin Beniwal\nThe course coordinator is Prof.Vinay Ribeiro. For more information about the course visit the course webpage. </string>
    <string name="webpage">Course Homepage</string>
    <string name="try_again">Try Again</string>
    <string name="home">Home</string>
    <string name="exit">Quit</string>
</resources>
