<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent"
    android:scrollbars = "none">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="70dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login">
        <!--change paddingTop to change the
            distance from the top -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/team_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/member1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/number1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/member2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/number2"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/member3"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:hint="@string/number3"/>
    <Button
        android:layout_width="500dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:text="@string/button_login"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#5e1740"
        android:background="#6fca14"/>

</LinearLayout>

</ScrollView>
